solve exercise 4-flex-information
I realized that following directions as stated is way more important.
I thought too much for a simple problem,but i guess it may be worth time.
Implementing container and items was new to me and i have learnt it well.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
-body {
+/* body {
   font-family: 'Courier New', Courier, monospace;
+  color: grey;
 }
 
 img {
@@ -10,6 +11,72 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+  color: black;
+}
+
+.symbols{
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  gap: 162px;
+  align-items: center;
+}
+
+.info{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info .text{
+  width: 200px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+/* do not edit this footer */
+/* .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
+} */ 
+
+/*The above one is my solution*/
+
+/*The code below is given solution*/
+
+body {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.item{
+  max-width: 200px;
 }
 
 /* do not edit this footer */
